// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`react block extensions should add an extension 1`] = `
<icon>
  
</icon>
`;

exports[`react block extensions should add an extension with a boolean property 1`] = `
<icon
  highlight={true}
>
  
</icon>
`;

exports[`react block extensions should add an extension with a class 1`] = `
<icon
  className="my-class"
>
  
</icon>
`;

exports[`react block extensions should add an extension with a lone attribute 1`] = `
<icon
  attr=""
>
  
</icon>
`;

exports[`react block extensions should add an extension with a lone attribute with a default boolean value 1`] = `
<icon
  highlight={true}
>
  
</icon>
`;

exports[`react block extensions should add an extension with a lone attribute with a default value 1`] = `
<icon
  attr="default"
>
  
</icon>
`;

exports[`react block extensions should add an extension with a mapped argument 1`] = `
<icon
  icon="my-icon"
>
  
</icon>
`;

exports[`react block extensions should add an extension with a mapped content 1`] = `
<icon
  tooltip="my-tooltip"
/>
`;

exports[`react block extensions should add an extension with a quoted attribute 1`] = `
<icon
  attr="my attribute"
>
  
</icon>
`;

exports[`react block extensions should add an extension with all types of parameters 1`] = `
<icon
  attr="default"
  attr2="my-attr"
  attr3="my attribute"
  className="my-class"
  id="my-id"
>
  
</icon>
`;

exports[`react block extensions should add an extension with an attribute 1`] = `
<icon
  attr="my-attr"
>
  
</icon>
`;

exports[`react block extensions should add an extension with an id 1`] = `
<icon
  id="my-id"
>
  
</icon>
`;

exports[`react block extensions should work with other markdown 1`] = `
Array [
  <h1>
    heading
  </h1>,
  "
",
  <icon>
    
  </icon>,
]
`;

exports[`react inline extensions should add an extension 1`] = `
<p>
  <icon />
</p>
`;

exports[`react inline extensions should add an extension with a boolean property 1`] = `
<p>
  <icon
    highlight={true}
  />
</p>
`;

exports[`react inline extensions should add an extension with a class 1`] = `
<p>
  <icon
    className="my-class"
  />
</p>
`;

exports[`react inline extensions should add an extension with a lone attribute 1`] = `
<p>
  <icon
    attr=""
  />
</p>
`;

exports[`react inline extensions should add an extension with a lone attribute with a default boolean value 1`] = `
<p>
  <icon
    highlight={true}
  />
</p>
`;

exports[`react inline extensions should add an extension with a lone attribute with a default value 1`] = `
<p>
  <icon
    attr="default"
  />
</p>
`;

exports[`react inline extensions should add an extension with a mapped argument 1`] = `
<p>
  <icon
    icon="my-icon"
  />
</p>
`;

exports[`react inline extensions should add an extension with a mapped content 1`] = `
<p>
  <icon
    tooltip="my-tooltip"
  />
</p>
`;

exports[`react inline extensions should add an extension with a quoted attribute 1`] = `
<p>
  <icon
    attr="my attribute"
  />
</p>
`;

exports[`react inline extensions should add an extension with all types of parameters 1`] = `
<p>
  <icon
    attr="default"
    attr2="my-attr"
    attr3="my attribute"
    className="my-class"
    id="my-id"
  />
</p>
`;

exports[`react inline extensions should add an extension with an attribute 1`] = `
<p>
  <icon
    attr="my-attr"
  />
</p>
`;

exports[`react inline extensions should add an extension with an id 1`] = `
<p>
  <icon
    id="my-id"
  />
</p>
`;

exports[`react inline extensions should work with other markdown 1`] = `
Array [
  <h1>
    heading
  </h1>,
  "
",
  <p>
    <icon />
  </p>,
]
`;
